# MyEvolutionSim2

./: CMakeLists.txt  README.md  main.cpp
Headers/: SimulationHandler.hpp  Utils.hpp
Headers/Cell/: Cell.hpp
Headers/FoodElement/: FoodElement.hpp
Headers/Grid/: Grid.hpp
Headers/Nodes/: Node.hpp
Headers/Nodes/ActionNodes/: ActionNode.hpp
Headers/Nodes/InputNodes/: InputNode.hpp  InputNode_HDC.hpp
Headers/Vector2/: Vector2.hpp
Headers/Window/: SDLWindow.hpp
Obsidian Files/: ToDo.md
Obsidian Files/.obsidian/: app.json  graph.json  workspace.json
Obsidian Files/Code/: main.cpp.md
Obsidian Files/Code/Headers/: ActionNode.hpp.md  Cell.hpp.md  Grid.hpp.md  InputNode.hpp.md  Node.hpp.md  SDLWindow.hpp.md  SimulationHandler.hpp.md  Vector2.hpp.md  Window.hpp.md
Obsidian Files/Code/Sources/: ActionNode.cpp.md  Cell.cpp.md  Directions.cpp.md  Grid.cpp.md  InputNode.cpp.md  NeuronNode.cpp.md  SDLWindow.cpp.md  SimulationHandler.cpp.md  Utils.cpp.md  Utils.hpp.md  Vector2.cpp.md  Window.cpp.md
Obsidian Files/FlowCharts/: .$Node Creation Logic.drawio.bkp  Node Creation Logic.drawio
Obsidian Files/Logic/: Adding a new NodeType and relative action.md  Node Genome.md  Node ID.md
Src/: SimulationHandler.cpp  Utils.cpp
Src/Cell/: Cell.cpp
Src/FoodElement/: FoodElement.cpp
Src/Grid/: Grid.cpp
Src/Nodes/: Node.cpp
Src/Nodes/ActionNodes/: ActionNode.cpp
Src/Nodes/InputNodes/: InputNode.cpp
Src/Vector2/: Vector2.cpp
Src/Window/: SDLWindow.cpp
